# openCL-demo

./: CMakeLists.txt  Makefile  README.md
src/: main.cpp  raw_to_rgb.cl
